--- a/src/components/layout/scoreBoard/style.module.scss
+++ b/src/components/layout/scoreBoard/style.module.scss
@@ -1,4 +1,4 @@
 .inactive {
-  border: 0 solid transparent;
+  border: 0px solid transparent;
   border-bottom: 5px solid transparent !important;
 }
